--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=example
-DB_NAME=nest-events
+NODE_ENV=development
+PORT=3000
+DB_NAME=microservice-jenius-endy
 MONGGOSE_USER=endy
 MONGGOSE_PASSWORD=endy
+SECRET_KEY=papandayan
