add postman collection

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ DB_NAME=microservice-jenius-endy
 MONGGOSE_USER=endy
 MONGGOSE_PASSWORD=endy
 SECRET_KEY=papandayan
+REDIS_DB_NAME=microservices-jenius-endy
+REDIS_PASSWORD=Veh1MvLYeVHXtGq4A0ik31X0taiIl4WN
+REDIS_HOST=redis-17704.c1.ap-southeast-1-1.ec2.cloud.redislabs.com
+REDIS_PORT=17704
