--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.0.0",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^3.4.3",
+    "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
